--- a/config/database.yml
+++ b/config/database.yml
@@ -1,20 +1,20 @@
 development:
   adapter: mysql2
-  database: proceedings_development
+  database: mocals_development
   pool: 5
   timeout: 5000
   encoding: utf8
 
 test:
   adapter: mysql2
-  database: proceedings_test
+  database: mocals_test
   pool: 5
   timeout: 5000
   encoding: utf8
 
 production:
   adapter: mysql2
-  database: proceedings_production
+  database: mocals_production
   pool: 5
   timeout: 5000
   encoding: utf8
